# quadmix

./: .gitignore  ARCHITECTURE.md  QUADMIX_PIPELINE_FLOW.md  README.md  paper_text.txt  pyproject.toml  requirements.txt  test_v4.2_implementation.py  todo.md
analysis/: diagnose_variance.py
configs/: schema_essential_web.yaml  schema_stem.yaml
data/: README.md  README_cap_v1.md  README_stem_v1.md  README_v3.md  README_v4.2.md  README_v4.3.md  README_v4.md  README_v5.md  README_v6.md  train_test_distribution_analysis.json
docs/: ARCHITECTURE.md  CAP_DESIGN.md  DATASET_SCHEMA_DESIGN.md  DOWNSTREAM_BENCHMARKS_ANALYSIS.md  EVALUATION_METRICS_RESTRUCTURING.md  FDC_DOMAIN_MAPPING_DESIGN.md  NOTE_domain_ratio_constraint.md  NPU_DEPLOYMENT.md  STEM_V1_DESIGN.md  V4.2_IMPLEMENTATION_SUMMARY.md  VALIDATION_SET_V3_ANALYSIS.md  VALIDATION_SET_V4.2_DESIGN.md  VALIDATION_SET_V5_DESIGN.md
nanochat_mid_compare/: README.md  analyze_batch.py  analyze_doc_lengths.py  analyze_problematic_batches.py  capture_dataloader_only.py  capture_multi_steps.py  continue_experiment.sh  decode_batch.py  diagnose_domain_distribution.py  eval_base_model.sh  extract_document.py  find_hanging_document.py  generate_quadmix_report.py  generate_replay_script.py  generate_report.py  get_model_info.py  prepare_data.py  replay_training.py  run_capture_dataloader.sh  run_capture_multi_steps.sh  run_eval_only.sh  run_experiment.sh  run_quadmix_only.sh  run_replay_training.sh  run_resume_test.sh  run_stem_experiment.sh  simulate_dataloader.py  simulate_dataloader.sh  todo.md
scripts/: demo_reoptimize.sh  (+25 more)
(+83 files in other folders)
