[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quadmix"
version = "2.0.0"
description = "QuaDMix: Quality-Diversity Balanced Data Selection for Efficient LLM Pretraining"
readme = "README.md"
license = {text = "Apache 2.0"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "lightgbm>=4.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "joblib>=1.3",
    "pandas>=2.0",
    "pyarrow>=10.0",
]

[project.urls]
Homepage = "https://github.com/liujin99/quadmix"
Paper = "https://arxiv.org/abs/2504.16511"

[tool.setuptools.packages.find]
where = ["src"]
include = ["quadmix*"]

[tool.setuptools.package-data]
quadmix = ["py.typed"]
